<resources>
    <string name="app_name">FlightCompare</string>
    <string name="flights_tab">Flights</string>
    <string name="favorites_tab">Saved</string>
    <string name="compare_tab">Compare</string>

    <!-- Find a flight screen -->
    <string name="find_flight">Find a Flight</string>
    <string name="search_flight">Search</string>
    <string name="dest_from">From</string>
    <string name="dest_to">To</string>
    <string name="airport_code_hint">Airport Code</string>
    <string name="city">City</string>
    <string name="depart_date">Departure Date</string>
    <string name="return_date">Return Date</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="roundtrip">Round trip</string>
    <string name="oneway">One way</string>

    <!-- Flight search results screen -->
    <string name="search_again">Search Again</string>
    <string name="depart_flight">Departure Flight:</string>
    <string name="return_flight">Returning Flight:</string>
    <string name="save_question">Save?</string>
    <string name="no_search_results">There are no results for your search.</string>

    <!-- Saved flights screen -->
    <string name="compare_question">Compare?</string>
    <string name="saved_flights">Saved Flights</string>
    <string name="no_saved_flights">You have no saved flights right now</string>
    <string name="compare_flights_info">Select up to 3 flights to compare</string>

    <!-- Comparison screen -->
    <string name="how_to_compare">Select flights from your saved flights to compare</string>
    <string name="price">PRICE</string>
    <string name="flytime">FLYTIME</string>
    <string name="bags">CHECKED BAGS</string>
    <string name="layovertime">LAYOVER TIME</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="to_from">DEST/ORIGIN</string>

    <!-- Comparison display values -->
    <string name="price_text">$%1$d</string>
    <string name="layovertime_text">%1$d h, %2$d m</string>

    <!-- Airline Names -->
    <string name="american">American Airlines</string>
    <string name="delta">Delta Air Lines</string>
    <string name="alaska">Alaska Airlines</string>
    <string name="southwest">Southwest Airlines</string>
    <string name="hawaiian">Hawaiian Airlines</string>
    <string name="frontier">Frontier Airlines</string>
    <string name="spirit">Spirit Airlines</string>
    <string name="jetblue">JetBlue Airways</string>
    <string name="united">United Airlines</string>
    <string name="allegiant">Allegiant Air</string>
</resources>
