<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/price"
            android:checked="true"
            android:title="@string/price" />
        <item android:id="@+id/flytime"
            android:checked="true"
            android:title="@string/flytime" />
        <item android:id="@+id/bags"
            android:checked="true"
            android:title="@string/bags" />
        <item android:id="@+id/layovertime"
            android:checked="true"
            android:title="@string/layovertime" />
        <item android:id="@+id/from"
            android:checked="true"
            android:title="@string/dest_from" />
        <item android:id="@+id/to"
            android:checked="true"
            android:title="@string/dest_to" />
    </group>
</menu>